# llm-dag-keyword-harmonisation

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
appendices/: appendix_a_prompt_templates.md  appendix_b_annotation_guide.md
configs/: ablation_config.yaml  candidate_gen_config.yaml  candidate_generation.yaml  canonical_rules.yaml  dag_config.yaml  eval_config.yaml  guard_thresholds.yaml  model_config.yaml  normalisation_config.yaml  scopus_batch_queries.yaml
data/: README.md
docs/: annotation_guide.md  data_access.md  label_policy.md  reproducibility.md  retrieval_manifest.md  workflow_description.md
examples/: synthetic_keywords.csv  synthetic_mapping_example.csv
results/: ablation_results.csv  ablation_results_summary.txt  dev_results_baselines.csv  dev_results_full_workflow.csv  downstream_cost_estimate.txt  downstream_qualitative_examples.txt  downstream_results.csv  downstream_results_summary.txt  error_analysis.csv  error_analysis_summary.txt  test_predictions.csv  test_predictions_baselines.csv  test_results.csv  test_results_baselines.csv  test_results_summary.txt  tuned_thresholds.json
schemas/: llm_response.schema.json
scripts/: assemble_benchmark.py  compute_agreement.py  estimate_downstream_cost.py  export_vosviewer.py  figure1_dag_workflow.py  figure2_thematic_comparison.py  generate_benchmark_candidates.py  ingest_profile.py  prepare_annotation_sheets.py  rebuild_downstream.py  run_ablations.py  run_baselines.py  run_downstream.py  run_downstream_analysis.py  split_benchmark.py  (+2 more)
(+91 files in other folders)
