[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "concept-harmonisation"
version = "0.1.0"
description = "Auditable LLM-DAG workflow for bibliometric keyword harmonisation"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
